--- a/src/components/TodoItem/index.css
+++ b/src/components/TodoItem/index.css
@@ -3,11 +3,25 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-left: 70px;
-  margin-right: 70px;
+  align-items: center;
+  width: 100%;
 }
+
 li {
   list-style-type: none;
+}
+.edit-input {
+  width: 90%;
+  padding: 5px;
+  margin-left: 0px;
+}
+.edit-cont {
+  width: 75%;
+}
+.check-cont {
+  display: flex;
+  align-items: center;
+  width: 75%;
 }
 
 .name {
@@ -35,13 +49,18 @@ button {
 .checked {
   text-decoration: line-through;
 }
-.check-cont {
-  display: flex;
-  align-items: center;
-}
+
 .save-butn {
   margin-right: 10px;
   border: none;
   background-color: #ff0b37;
   color: #ffffff;
+}
+@media (max-width: 576px) {
+  .cont {
+    font-size: 15px;
+  }
+  button {
+    padding: 5px;
+  }
 }
